Merge runtime-with-polyglot project into runtime/Test